# docx_comments

./: .gitignore  pyproject.toml
src/docx_comments/: __init__.py  docx.py
src/docx_comments/comments/: comment.py  comments.py
src/docx_comments/elements/: attrib.py  bubble.py  element_base.py  element_maker.py  paragraph.py  paragraph_group.py  prop_decode.py  properties.py  run.py
src/docx_comments/notes/: note.py  notes.py
src/docx_comments/styles/: style.py  styles.py
